v1.1.0/get-started/bridge/bridge-cli.mdx
---
title: "Bridge CLI"
sidebarTitle: Bridge CLI
---

<p> The mev-commit chain uses native ETH that must be bridged from L1 using our lock and mint bridge. A user CLI application can be downloaded from the [releases page](https://github.com/primev/mev-commit/releases/latest). </p>

Or download the 1.0.0 bridge CLI directly from the links below:
* [Darwin ARM64](https://github.com/primev/mev-commit/releases/download/v1.1.0/mev-commit-bridge-user-cli_1.0.0_Darwin_arm64.tar.gz)
* [Darwin x86_64](https://github.com/primev/mev-commit/releases/download/v1.1.0/mev-commit-bridge-user-cli_1.0.0_Darwin_x86_64.tar.gz)
* [Linux ARM64](https://github.com/primev/mev-commit/releases/download/v1.1.0/mev-commit-bridge-user-cli_1.0.0_Linux_arm64.tar.gz)
* [Linux x86_64](https://github.com/primev/mev-commit/releases/download/v1.1.0/mev-commit-bridge-user-cli_1.0.0_Linux_x86_64.tar.gz)
* [Windows x86_64](https://github.com/primev/mev-commit/releases/download/v1.1.0/mev-commit-bridge-user-cli_1.0.0_Windows_x86_64.zip)

You can confirm your operating system and architecture by running `uname -sm`.

On MacOS, a warning may appear about running untrusted software. Try using `xattr -d com.apple.quarantine ./user-cli` to disable this warning, or feel free to build/use the CLI from source [here](https://github.com/primev/mev-commit/tree/main/bridge/standard).

<Note>In order to bridge funds, users need to have an account which is funded with mainnet ETH. </Note>

<CodeGroup>

```bash ❯_ bridge to settlement chain from L1
user-cli bridge-to-settlement \
	--account-key <Private Key of source account> \
	--dest-addr <Address to fund on the mev-commit chain> \
	--amount <Amount in Wei>
```

```bash ❯_ bridge to L1 from settlement chain
user-cli bridge-to-l1 \
	--account-key <Private Key of source account> \
	--dest-addr <Address to fund on the mev-commit chain> \
	--amount <Amount in Wei>
```

</CodeGroup>

A static fee is charged for bridging from the mev-commit chain to L1, to compensate the relayer for transaction inclusion. This fee is currently set to 0.005 ETH.

<Note> Users can also use a keystore file instead of using the private key. </Note>

<Note> CLI currently uses default contract addresses for mainnet and default mainnet RPC endpoints. Users can use separate RPC URLs using the respective options. </Note>

<p> To check other options available in the user CLI, users can use the `-h` option </p>

```
./user-cli -h
NAME:
   mev-commit-bridge-user-cli - CLI for interacting with a custom bridge between L1 and the mev-commit (settlement) chain

USAGE:
   mev-commit-bridge-user-cli [global options] command [command options]

COMMANDS:
   bridge-to-settlement  Submit a transaction to bridge ether to the settlement chain
   bridge-to-l1          Submit a transaction to bridge ether back to L1
   help, h               Shows a list of commands or help for one command

GLOBAL OPTIONS:
   --help, -h  show help

```

```
./user-cli bridge-to-settlement -h
NAME:
   mev-commit-bridge-user-cli bridge-to-settlement - Submit a transaction to bridge ether to the settlement chain

USAGE:
   mev-commit-bridge-user-cli bridge-to-settlement [command options]

OPTIONS:
   --account-key value               private key of the account to use for signing transactions in hex encoding [$ACCOUNT_KEY]
   --keystore-path value             path to keystore location [$MEV_ORACLE_KEYSTORE_PATH]
   --keystore-password value         use to access keystore [$MEV_ORACLE_KEYSTORE_PASSWORD]
   --amount value                    amount of ether to bridge in wei [$AMOUNT]
   --dest-addr value                 destination address on the mev-commit (settlement) chain [$DEST_ADDR]
   --l1-rpc-url value                URL for L1 RPC [$L1_RPC_URL]
   --settlement-rpc-url value        URL for settlement RPC [$SETTLEMENT_RPC_URL]
   --l1-contract-addr value          address of the L1 gateway contract [$L1_CONTRACT_ADDR]
   --settlement-contract-addr value  address of the settlement gateway contract [$SETTLEMENT_CONTRACT_ADDR]
   --silent                          disable spinner (default: false) [$SILENT]
   --help, -h                        show help
```

<Note> The current bridge waits for finalization. Thus when moving funds from L1 to the settlement chain, users will have to wait for at least 15 mins (L1 finalization time) before getting a confirmation. Conversely, bridging from settlement to L1 chain will be significantly faster (less than 1 second settlement chain finalization time). </Note>

After the bridge is successful, the following command can be used to check their mev-commit chain balance

### Mainnet
```
cast balance mev_commit_mainnet_address --rpc-url https://chainrpc.mev-commit.xyz/
```

### Testnet
```
cast balance mev_commit_testnet_address --rpc-url https://chainrpc.testnet.mev-commit.xyz/
```

